# privatehomebox

./: .gitignore  .pre-commit-config.yaml  dev-sync.sh
.cursor/rules/: code-comments.mdc  installing-configure-dev-tools.mdc
device_apps/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
diagram-gen/: README.md  generate.py  requirements.txt
diagram-gen/sources/: admin-ui--diagram-1.mmd  architecture-overview--diagram-1.mmd  architecture-overview--diagram-2.mmd  architecture-overview--diagram-3.mmd  workspace-data-store--diagram-1.mmd  workspace-data-store--diagram-2.mmd
docs/: agent-manager.md  arch-tech-decisions.md  arch.md  channel-plugin-architecture.md  channel-plugin-guide.md  communication-manager.md  dev_env.md  device-auth.md  flutter_architecture.md  gateway.md  internal_todo.md  logging.md  mobile_app.md  phbserver.md
mintdocs/: AGENTS.md  constants.mdx  docs.json  gateway-instances.mdx  workspace.mdx
mintdocs/architecture/: admin-ui.mdx  architecture-overview.mdx  constants.mdx  tools-architecture.mdx
mintdocs/phb/: channel.mdx  devices.mdx  server-ops.mdx
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/test/: widget_test.dart
phbserver/: gateway_state.json  pyproject.toml
phbserver/.gateway-state/: gateway_state.json
phbserver/gateway/: README.md  pyproject.toml
phbserver/phb-channel-sdk/: README.md  pyproject.toml
phbserver/phb-channel-sdk/src/phb_channel_sdk/: __init__.py  base.py  constants.py  log_setup.py  models.py  transport.py
phbserver/phbcli/: README.md  pyproject.toml
(+88 files in other folders)
